; ModuleID = '/home/carl/AnghaBench/lede/package/lean/luci-app-xlnetacc/tools/po2lmo/src/extr_template_lmo.c_lmo_load_catalog.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/luci-app-xlnetacc/tools/po2lmo/src/extr_template_lmo.c_lmo_load_catalog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_9__*, %struct.TYPE_10__*, i32 }
%struct.TYPE_10__ = type { %struct.TYPE_10__* }
%struct.dirent = type { i8* }

@PATH_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"*.%s.lmo\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1
@_lmo_catalogs = common dso_local global %struct.TYPE_9__* null, align 8
@_lmo_active_catalog = common dso_local global %struct.TYPE_9__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lmo_load_catalog(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca [16 x i8], align 16
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.dirent*, align 8
  %11 = alloca %struct.TYPE_10__*, align 8
  %12 = alloca %struct.TYPE_9__*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* null, i32** %6, align 8
  %14 = load i32, i32* @PATH_MAX, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %8, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %9, align 8
  store %struct.dirent* null, %struct.dirent** %10, align 8
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %11, align 8
  store %struct.TYPE_9__* null, %struct.TYPE_9__** %12, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @lmo_change_catalog(i8* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  store i32 1, i32* %13, align 4
  br label %104

22:                                               ; preds = %2
  %23 = load i8*, i8** %5, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load i8*, i8** %5, align 8
  %27 = call i32* @opendir(i8* %26)
  store i32* %27, i32** %6, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %30, label %29

29:                                               ; preds = %25, %22
  br label %91

30:                                               ; preds = %25
  %31 = call %struct.TYPE_9__* @malloc(i32 24)
  store %struct.TYPE_9__* %31, %struct.TYPE_9__** %12, align 8
  %32 = icmp ne %struct.TYPE_9__* %31, null
  br i1 %32, label %34, label %33

33:                                               ; preds = %30
  br label %91

34:                                               ; preds = %30
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %36 = call i32 @memset(%struct.TYPE_9__* %35, i32 0, i32 24)
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 8
  %40 = sext i32 %39 to i64
  %41 = inttoptr i64 %40 to i8*
  %42 = load i8*, i8** %4, align 8
  %43 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %41, i32 4, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %42)
  %44 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %45 = load i8*, i8** %4, align 8
  %46 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %44, i32 16, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %45)
  br label %47

47:                                               ; preds = %78, %34
  %48 = load i32*, i32** %6, align 8
  %49 = call %struct.dirent* @readdir(i32* %48)
  store %struct.dirent* %49, %struct.dirent** %10, align 8
  %50 = icmp ne %struct.dirent* %49, null
  br i1 %50, label %51, label %79

51:                                               ; preds = %47
  %52 = getelementptr inbounds [16 x i8], [16 x i8]* %7, i64 0, i64 0
  %53 = load %struct.dirent*, %struct.dirent** %10, align 8
  %54 = getelementptr inbounds %struct.dirent, %struct.dirent* %53, i32 0, i32 0
  %55 = load i8*, i8** %54, align 8
  %56 = call i32 @fnmatch(i8* %52, i8* %55, i32 0)
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %78, label %58

58:                                               ; preds = %51
  %59 = trunc i64 %15 to i32
  %60 = load i8*, i8** %5, align 8
  %61 = load %struct.dirent*, %struct.dirent** %10, align 8
  %62 = getelementptr inbounds %struct.dirent, %struct.dirent* %61, i32 0, i32 0
  %63 = load i8*, i8** %62, align 8
  %64 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %17, i32 %59, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i8* %60, i8* %63)
  %65 = call %struct.TYPE_10__* @lmo_open(i8* %17)
  store %struct.TYPE_10__* %65, %struct.TYPE_10__** %11, align 8
  %66 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %67 = icmp ne %struct.TYPE_10__* %66, null
  br i1 %67, label %68, label %77

68:                                               ; preds = %58
  %69 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %70 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %69, i32 0, i32 1
  %71 = load %struct.TYPE_10__*, %struct.TYPE_10__** %70, align 8
  %72 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %73 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %72, i32 0, i32 0
  store %struct.TYPE_10__* %71, %struct.TYPE_10__** %73, align 8
  %74 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %75 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %76 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %75, i32 0, i32 1
  store %struct.TYPE_10__* %74, %struct.TYPE_10__** %76, align 8
  br label %77

77:                                               ; preds = %68, %58
  br label %78

78:                                               ; preds = %77, %51
  br label %47

79:                                               ; preds = %47
  %80 = load i32*, i32** %6, align 8
  %81 = call i32 @closedir(i32* %80)
  %82 = load %struct.TYPE_9__*, %struct.TYPE_9__** @_lmo_catalogs, align 8
  %83 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %84 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %83, i32 0, i32 0
  store %struct.TYPE_9__* %82, %struct.TYPE_9__** %84, align 8
  %85 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  store %struct.TYPE_9__* %85, %struct.TYPE_9__** @_lmo_catalogs, align 8
  %86 = load %struct.TYPE_9__*, %struct.TYPE_9__** @_lmo_active_catalog, align 8
  %87 = icmp ne %struct.TYPE_9__* %86, null
  br i1 %87, label %90, label %88

88:                                               ; preds = %79
  %89 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  store %struct.TYPE_9__* %89, %struct.TYPE_9__** @_lmo_active_catalog, align 8
  br label %90

90:                                               ; preds = %88, %79
  store i32 0, i32* %3, align 4
  store i32 1, i32* %13, align 4
  br label %104

91:                                               ; preds = %33, %29
  %92 = load i32*, i32** %6, align 8
  %93 = icmp ne i32* %92, null
  br i1 %93, label %94, label %97

94:                                               ; preds = %91
  %95 = load i32*, i32** %6, align 8
  %96 = call i32 @closedir(i32* %95)
  br label %97

97:                                               ; preds = %94, %91
  %98 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %99 = icmp ne %struct.TYPE_9__* %98, null
  br i1 %99, label %100, label %103

100:                                              ; preds = %97
  %101 = load %struct.TYPE_9__*, %struct.TYPE_9__** %12, align 8
  %102 = call i32 @free(%struct.TYPE_9__* %101)
  br label %103

103:                                              ; preds = %100, %97
  store i32 -1, i32* %3, align 4
  store i32 1, i32* %13, align 4
  br label %104

104:                                              ; preds = %103, %90, %21
  %105 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %105)
  %106 = load i32, i32* %3, align 4
  ret i32 %106
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @lmo_change_catalog(i8*) #2

declare dso_local i32* @opendir(i8*) #2

declare dso_local %struct.TYPE_9__* @malloc(i32) #2

declare dso_local i32 @memset(%struct.TYPE_9__*, i32, i32) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, ...) #2

declare dso_local %struct.dirent* @readdir(i32*) #2

declare dso_local i32 @fnmatch(i8*, i8*, i32) #2

declare dso_local %struct.TYPE_10__* @lmo_open(i8*) #2

declare dso_local i32 @closedir(i32*) #2

declare dso_local i32 @free(%struct.TYPE_9__*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
